log
Mon Apr 20 03:41:08 AM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:55:12: error: ‘mao’ undeclared (first use in this function); did you mean ‘map’?
   55 |     return mao;
      |            ^~~
      |            map
hashmap.c:55:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:49:5: error: ignoring return value of ‘realloc’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   49 |     realloc(map->buckets, capacity * sizeof(Pair*));
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
hashmap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
10678ef
